--- a/app/src/main/res/layout/info_detail.xml
+++ b/app/src/main/res/layout/info_detail.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scrollbars="none">
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/scrollView_listView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scrollbars="none">
+<!--<LinearLayout-->
+    <!--android:orientation="vertical"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent">-->
 
         <LinearLayout
             android:orientation="vertical"
@@ -51,6 +51,6 @@
             </com.pudding.financeandroid.view.MyListView>
 
         </LinearLayout>
-    </ScrollView>
+</ScrollView>
 
-</LinearLayout>
+<!--</LinearLayout>-->
