--- a/app/src/main/res/layout/advertisement_info.xml
+++ b/app/src/main/res/layout/advertisement_info.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/scrollView_listView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
-
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scrollbars="none">
+    android:scrollbars="none">
+<!--<LinearLayout -->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent"-->
+    <!--android:orientation="vertical">-->
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -50,5 +51,5 @@
 
         </LinearLayout>
 
-    </ScrollView>
-</LinearLayout>
+</ScrollView>
+<!--</LinearLayout>-->
