--- a/app/src/main/res/layout/my_income.xml
+++ b/app/src/main/res/layout/my_income.xml
@@ -129,32 +129,59 @@
         <!--ptr:ptrAnimationStyle="flip" >-->
     <!--</com.handmark.pulltorefresh.library.PullToRefreshListView>-->
 
-    <ListView
-        android:id="@+id/myIncome_detail_list"
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:divider="@drawable/divider">
-    </ListView>
+        android:scrollbars="none">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingTop="15dp"
-        android:paddingBottom="15dp"
-        android:gravity="center_horizontal"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="查看更多"
-            android:textColor="@color/font_6"
-            android:textSize="16sp"/>
-    </LinearLayout>
+            android:orientation="vertical">
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/page_bg"/>
+            <com.pudding.financeandroid.view.MyListView
+                android:id="@+id/myIncome_detail_list"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <!--android:divider="@drawable/divider"-->
+            </com.pudding.financeandroid.view.MyListView>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/page_bg"/>
+
+            <LinearLayout
+                android:id="@+id/load_more_income"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingTop="15dp"
+                android:paddingBottom="15dp"
+                android:gravity="center_horizontal"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="查看更多"
+                    android:textColor="@color/font_9"
+                    android:textSize="16sp"/>
+
+                <ImageView
+                    android:layout_width="18dp"
+                    android:layout_height="18dp"
+                    android:src="@drawable/icon_down"
+                    android:layout_marginLeft="10dp"
+                    android:layout_gravity="center_vertical"/>
+            </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/page_bg"/>
+
+        </LinearLayout>
+
+    </ScrollView>
 
 </LinearLayout>
