--- a/app/src/main/res/layout/my_income_list_item.xml
+++ b/app/src/main/res/layout/my_income_list_item.xml
@@ -14,19 +14,36 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-
-        <TextView
-            android:id="@+id/income_amount"
+        
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="+￥13.00"
-            android:textColor="@color/title_bg"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            android:paddingTop="40dp"
-            android:paddingBottom="40dp"
-            android:paddingLeft="20dp"
-            android:paddingRight="20dp"/>
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/income_amount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="+￥13.00"
+                android:textColor="@color/title_bg"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:paddingTop="20dp"
+                android:paddingLeft="20dp"
+                android:layout_marginBottom="5dp"
+                android:paddingRight="20dp"/>
+
+            <TextView
+                android:id="@+id/income_typeName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="利息"
+                android:textColor="@color/font_9"
+                android:textSize="12sp"
+                android:paddingBottom="20dp"
+                android:layout_gravity="center_horizontal"/>
+
+        </LinearLayout>
 
         <View
             android:layout_width="1dp"
