--- a/app/src/main/res/layout/main_home_right_list.xml
+++ b/app/src/main/res/layout/main_home_right_list.xml
@@ -9,7 +9,7 @@
         android:layout_width="15dp"
         android:layout_height="15dp"
         android:layout_gravity="center_horizontal|center_vertical"
-        android:background="@drawable/icon_message"
+        android:background="@mipmap/icon_message"
         android:layout_marginRight="10dp"/>
 
 </LinearLayout>
