--- a/app/src/main/res/layout/tab_main_user.xml
+++ b/app/src/main/res/layout/tab_main_user.xml
@@ -10,29 +10,31 @@
         android:layout_height="match_parent"
          android:orientation="vertical">
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="200dp"
+            android:orientation="vertical"
             android:background="@drawable/banner_user">
 
             <ImageView
                 android:id="@+id/user_icon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/iamge_uesrn"
-                android:layout_centerInParent="true"/>
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:src="@drawable/user_icon_public"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="50dp"/>
 
             <TextView
                 android:id="@+id/user_info_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:layout_alignBottom="@+id/user_icon"
                 android:text="13700691190"
                 android:textColor="@color/white"
-                android:textSize="16sp"/>
+                android:textSize="16sp"
+                android:layout_marginTop="30dp"
+                android:layout_gravity="center_horizontal"/>
 
-        </RelativeLayout>
+        </LinearLayout>
 
         <RelativeLayout
             android:id="@+id/user_center_layout_1"
