--- a/app/src/main/res/layout/financing_detail.xml
+++ b/app/src/main/res/layout/financing_detail.xml
@@ -216,7 +216,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="可购金额(W)"
+                        android:text="可购金额"
                         android:layout_gravity="center_horizontal"
                         android:gravity="center_horizontal"
                         android:textSize="14sp"
@@ -247,7 +247,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="总金额(W)"
+                        android:text="总金额"
                         android:layout_gravity="center_horizontal"
                         android:textSize="14sp"
                         android:textColor="@color/font_9"/>
