--- a/app/src/main/res/layout/home_grid_item.xml
+++ b/app/src/main/res/layout/home_grid_item.xml
@@ -7,8 +7,8 @@
 
         <ImageView
             android:id="@+id/iv_item"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
             android:paddingTop="20dp"
             android:layout_marginBottom="45dp"
             android:visibility="invisible"
